--- a/quotes.html
+++ b/quotes.html
@@ -123,6 +123,7 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
    
   <ul>
   <li><a href="#fredrik-backman" id="toc-fredrik-backman" class="nav-link active" data-scroll-target="#fredrik-backman">Fredrik Backman</a></li>
+  <li><a href="#osamu-dazai" id="toc-osamu-dazai" class="nav-link" data-scroll-target="#osamu-dazai">Osamu Dazai</a></li>
   <li><a href="#f.-scott-fitzgerald" id="toc-f.-scott-fitzgerald" class="nav-link" data-scroll-target="#f.-scott-fitzgerald">F. Scott Fitzgerald</a></li>
   <li><a href="#sarah-kane" id="toc-sarah-kane" class="nav-link" data-scroll-target="#sarah-kane">Sarah Kane</a></li>
   <li><a href="#haruki-murakami" id="toc-haruki-murakami" class="nav-link" data-scroll-target="#haruki-murakami">Haruki Murakami</a></li>
@@ -163,6 +164,15 @@ gtag('config', 'G-C15D2JVJTJ', { 'anonymize_ip': true});
 </blockquote>
 <blockquote class="blockquote">
 <p>She just smiled, said that she loved books more than anything, and started telling him excitedly what each of the ones in her lap was about. And Ove realised that he wanted to hear her talking about the things she loved for the rest of his life.</p>
+</blockquote>
+</section>
+<section id="osamu-dazai" class="level3">
+<h3 class="anchored" data-anchor-id="osamu-dazai">Osamu Dazai</h3>
+<blockquote class="blockquote">
+<p>To wait. In our lives we know joy, anger, sorrow, and a hundred other emotions, but these emotions all together occupy a bare one per cent of our time. The remaining ninety-nine per cent is just living in waiting. I wait in momentary expectation, feeling as though my breasts are being crushed, for the sound in the corridor of the footsteps of happiness. Empty.</p>
+</blockquote>
+<blockquote class="blockquote">
+<p>As long as you love me, all I want is to spend my whole life by your side.</p>
 </blockquote>
 </section>
 <section id="f.-scott-fitzgerald" class="level3">
