--- a/research.html
+++ b/research.html
@@ -177,7 +177,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="TGl0JTIwUmV2aWV3">Lit Review <span class="quarto-category-count">(4)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(5)</span></div></div></div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
@@ -248,7 +248,7 @@ Reading Time
 </thead>
 <tbody class="list">
 
-<tr data-index="0" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1764004541329" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="908" data-listing-title-sort="The Yep Lab: Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="0" data-listing-date-sort="1755388800000" data-listing-file-modified-sort="1764625051509" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="908" data-listing-title-sort="The Yep Lab: Iron and the Motility of CFT073" data-listing-filename-sort="8-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-08-17</span>
@@ -262,7 +262,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="1" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1758412800000" data-listing-file-modified-sort="1764004541329" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="523" data-listing-title-sort="∆waaF and Colanic Acid as a Surfactant" data-listing-filename-sort="9-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="1" data-listing-date-sort="1758412800000" data-listing-file-modified-sort="1764625051509" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="523" data-listing-title-sort="∆waaF and Colanic Acid as a Surfactant" data-listing-filename-sort="9-17-2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-09-21</span>
@@ -276,7 +276,7 @@ Reading Time
 
 </tr>
 
-<tr data-index="2" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1759449600000" data-listing-file-modified-sort="1764004541331" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="415" data-listing-title-sort="LB, ∆fur, and Stationary Phase" data-listing-filename-sort="stationary-phase.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="2" data-listing-date-sort="1759449600000" data-listing-file-modified-sort="1764625051510" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="415" data-listing-title-sort="LB, ∆fur, and Stationary Phase" data-listing-filename-sort="stationary-phase.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-10-03</span>
@@ -290,13 +290,27 @@ Reading Time
 
 </tr>
 
-<tr data-index="3" data-categories="TGl0JTIwUmV2aWV3" data-listing-date-sort="1761523200000" data-listing-file-modified-sort="1764004541329" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="508" data-listing-title-sort="Issues with Biofilm Formation" data-listing-filename-sort="biofilm-issues.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+<tr data-index="3" data-listing-date-sort="1761523200000" data-listing-file-modified-sort="1764625051509" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="508" data-listing-title-sort="Issues with Biofilm Formation" data-listing-filename-sort="biofilm-issues.qmd" onclick="href = this.querySelector('a').getAttribute('href');
  if (href) { window.location=href ; return false; }">
 <td>
 <span class="listing-date">2025-10-27</span>
 </td>
 <td>
 <a href="./research/biofilm-issues.html" class="title listing-title">Issues with Biofilm Formation</a>
+</td>
+<td>
+<span class="listing-reading-time">3 min</span>
+</td>
+
+</tr>
+
+<tr data-index="4" data-listing-date-sort="1762732800000" data-listing-file-modified-sort="1764625051509" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="532" data-listing-title-sort="ASM 2025" data-listing-filename-sort="asm2025.qmd" onclick="href = this.querySelector('a').getAttribute('href');
+ if (href) { window.location=href ; return false; }">
+<td>
+<span class="listing-date">2025-11-10</span>
+</td>
+<td>
+<a href="./research/asm2025.html" class="title listing-title">ASM 2025</a>
 </td>
 <td>
 <span class="listing-reading-time">3 min</span>
